--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <!--header-->
   <header class="main-header clearfix" role="header">
     <div class="logo">
-      <!-- <a href="#"><img src="/assets/images/logo.png" alt="#"></a> -->
-      <a href="#"><em>Tihonov</em>School</a>
+      <a href="#"><img class="logo-main" src="/assets/images/logo.png" alt="#" height="120px"></a>
+      <!-- <a href="#"><em>Tihonov</em>School</a> -->
     </div>
     <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
     <nav id="menu" class="main-nav" role="navigation">
@@ -147,7 +147,7 @@
                     <img src="assets/images/choose-us-image-01.png" alt="">
                   </div>
                   <div class="col-md-6">
-                    <h4>Лучшее Обучние</h4>
+                    <h4>Лучшее Обучение</h4>
                     <p>Grad School is free educational HTML template with Bootstrap 4.5.2 CSS layout. Feel free to use it for educational or commercial purposes. You may want to make <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a little donation</a> to TemplateMo. Please tell your friends about us. Thank you.</p>
                   </div>
                 </div>
