--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--header-->
   <header class="main-header clearfix" role="header">
     <div class="logo">
-      <a href="#"><img class="logo-main" src="/assets/images/logo.png" alt="#" height="120px"></a>
+      <a href="#"><img class="logo-main" src="./assets/images/logo.png" alt="#" height="120px"></a>
       <!-- <a href="#"><em>Tihonov</em>School</a> -->
     </div>
     <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
